--- a/Index.html
+++ b/Index.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DiuGym Center</title>
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <header class="navbar">
-    <div class="logo">DiuGym Center</div>
-    <nav>
-      <a href="#home" class="active">Home</a>
+  <!-- Header with Navigation -->
+  <header class="header">
+    <div class="logo">💪 DiuGym</div>
+    
+    <!-- Mobile Menu Button -->
+    <button class="menu-btn" id="menuBtn">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+    
+    <!-- Navigation Links -->
+    <nav class="nav" id="nav">
+      <a href="#home">Home</a>
       <a href="#about">About</a>
       <a href="#classes">Classes</a>
       <a href="#trainers">Trainers</a>
       <a href="#pricing">Pricing</a>
       <a href="#testimonials">Testimonials</a>
       <a href="#contact">Contact</a>
-      <a href="login.html">Login</a>
-      <a href="register.html">Register</a>
+      <a href="login.html" class="btn-login">Login</a>
+      <a href="register.html" class="btn-signup">Sign Up</a>
     </nav>
   </header>
 
@@ -138,5 +148,7 @@
   <footer>
     <p>© 2025 DiuGym Center | All Rights Reserved</p>
   </footer>
+
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
