Redesign hero section with new layout and styles

--- a/Index.html
+++ b/Index.html
@@ -34,9 +34,29 @@
 
   <main>
     <section id="home" class="hero">
-      <h1>Build Your Best Self</h1>
-      <p>Simple plans, expert guidance, and a supportive community to keep you moving.</p>
-      <a href="login.html" class="btn">Start Training</a>
+      <div class="hero-overlay"></div>
+      <div class="hero-content">
+        <h1 class="hero-title">Transform Your Body, Elevate Your Mind</h1>
+        <p class="hero-subtitle">Professional training, state-of-the-art equipment, and a supportive community to help you achieve your fitness goals.</p>
+        <div class="hero-buttons">
+          <a href="register.html" class="btn btn-primary">Start Your Journey</a>
+          <a href="#classes" class="btn btn-secondary">Explore Classes</a>
+        </div>
+        <div class="hero-features">
+          <div class="feature-item">
+            <span class="feature-icon">🏋️</span>
+            <span class="feature-text">Professional Training</span>
+          </div>
+          <div class="feature-item">
+            <span class="feature-icon">💪</span>
+            <span class="feature-text">Modern Equipment</span>
+          </div>
+          <div class="feature-item">
+            <span class="feature-icon">👥</span>
+            <span class="feature-text">Supportive Community</span>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section id="about" class="section about">
