--- a/login.html
+++ b/login.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Login | Web Engineering Project</title>
 	<link rel="stylesheet" href="assets/css/forms.css">
 </head>
+
 <body>
 	<section class="form-container" aria-labelledby="login-title">
 		<h2 id="login-title">Sign in to Your Account</h2>
-		<form action="#" method="post" novalidate>
-			<div class="form-group">
-				<label for="email">Email address</label>
-				<input type="email" id="email" name="email" placeholder="you@example.com" autocomplete="email" required>
+		<form action="backend/login_user.php" method="POST"">
+			<div class=" form-group">
+			<label for="email">Email address</label>
+			<input type="email" id="email" name="email" placeholder="you@example.com" autocomplete="email" required>
 			</div>
 			<div class="form-group">
 				<label for="password">Password</label>
-				<input type="password" id="password" name="password" placeholder="Enter your password" autocomplete="current-password" required>
+				<input type="password" id="password" name="password" placeholder="Enter your password"
+					autocomplete="current-password" required>
 			</div>
-					<div class="form-meta">
-						<label for="remember" class="remember-me">
-							<input type="checkbox" id="remember" name="remember">
-							<span>Remember me</span>
-						</label>
-						<a href="#" class="forgot-link">Forgot password?</a>
-					</div>
-			<button type="submit" class="btn">Login</button>
+			<div class="form-meta">
+				<label for="remember" class="remember-me">
+					<input type="checkbox" id="remember" name="remember">
+					<span>Remember me</span>
+				</label>
+				<a href="#" class="forgot-link">Forgot password?</a>
+			</div>
+			<button type="submit" name="login" class="btn">Login</button>
 		</form>
 		<p class="extra">Don't have an account? <a href="register.html">Register</a></p>
 	</section>
 </body>
+
 </html>
