--- a/login.html
+++ b/login.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Login | Web Engineering Project</title>
-	<link rel="stylesheet" href="assets/css/forms.css">
+	<title>Login | DiuGym Center</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="assets/css/style.css">
 </head>
-
 <body>
-	<section class="form-container" aria-labelledby="login-title">
-		<h2 id="login-title">Sign in to Your Account</h2>
-		<form action="backend/login_user.php" method="POST"">
-			<div class=" form-group">
-			<label for="email">Email address</label>
-			<input type="email" id="email" name="email" placeholder="you@example.com" autocomplete="email" required>
+	<div class="form-container">
+		<h2>Sign in to Your Account</h2>
+		<form action="backend/login_user.php" method="POST">
+			<div class="form-group">
+				<label for="email">Email address</label>
+				<input type="email" id="email" name="email" placeholder="you@example.com" required>
 			</div>
 			<div class="form-group">
 				<label for="password">Password</label>
-				<input type="password" id="password" name="password" placeholder="Enter your password"
-					autocomplete="current-password" required>
+				<input type="password" id="password" name="password" placeholder="Enter your password" required>
 			</div>
 			<div class="form-meta">
-				<label for="remember" class="remember-me">
+				<label class="remember-me">
 					<input type="checkbox" id="remember" name="remember">
 					<span>Remember me</span>
 				</label>
 				<a href="#" class="forgot-link">Forgot password?</a>
 			</div>
-			<button type="submit" name="login" class="btn">Login</button>
+			<button type="submit" name="login" class="btn btn-primary full-width">Login</button>
 		</form>
 		<p class="extra">Don't have an account? <a href="register.html">Register</a></p>
-	</section>
+	</div>
 </body>
-
 </html>
