fix register and login page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </ul>
           <div class="nav-actions">
             <a href="login.html" class="btn btn-outline">Login</a>
-            <a href="register.html" class="btn btn-primary">Join Now</a>
+            <a href="register.php" class="btn btn-primary">Join Now</a>
           </div>
         </nav>
         <button class="menu-toggle" id="menuToggle">
